--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//WebContent/shop/shop_cart.jsp=UTF-8
+encoding//WebContent/shop/shop_cart_proc.jsp=UTF-8
 encoding//WebContent/shop/shop_detail.jsp=UTF-8
 encoding//WebContent/shop/shop_main.jsp=UTF-8
 encoding//WebContent/shop/shop_order.jsp=UTF-8
