--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/shop/shop_buy_proc.jsp=UTF-8
 encoding//WebContent/shop/shop_cart.jsp=UTF-8
 encoding//WebContent/shop/shop_cart_proc.jsp=UTF-8
 encoding//WebContent/shop/shop_detail.jsp=UTF-8
