27일 쇼핑몰 종료

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,5 @@ encoding//WebContent/shop/shop_cart_proc.jsp=UTF-8
 encoding//WebContent/shop/shop_detail.jsp=UTF-8
 encoding//WebContent/shop/shop_main.jsp=UTF-8
 encoding//WebContent/shop/shop_order.jsp=UTF-8
+encoding//src/prjbean/MainProc.java=UTF-8
+encoding//src/prjdata/QuizBuyDTO.java=UTF-8
